[metadata]
name = aiidalab_dev
version = 0.1.1
description = Tools for AiiDAlab development.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aiidalab/aiidalab-dev
author = The AiiDAlab Team
author_email = aiidalab@materialscloud.org
license = MIT License
classifiers =
    Development Status :: 4 - Beta
    Framework :: AiiDA
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    click~=7.1.2
python_requires = >=3.7

[options.entry_points]
console_scripts =
    develop-aiidalab = develop_aiidalab:cli

[options.extras_require]
pre_commit =
    pre-commit==2.9.2

[flake8]
ignore =
    E501  # Line length handled by black.
    W503  # Line break before binary operator, preferred formatting for black.
    E203  # Whitespace before ':', preferred formatting for black.
